very small fix in help

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -189,6 +189,7 @@
 			$('#helpOverlay').fadeOut( 400 );
 			isHelpOverlayOn = false;
 		}
+		showHideMenu(true);
 	}
 	
 	function deleteAllCookies() {
