Mobile Remote: slite instead of site-prod

--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" content="user-scalable=yes">
             <title>SENDER</title>
             <link rel="stylesheet" type="text/css" href="./css/index.css">
-                <script src="http://slite-prod.elasticbeanstalk.com:1337/socket.io/socket.io.js"></script>
+                <script src="http://slite.elasticbeanstalk.com:1337/socket.io/socket.io.js"></script>
                 <script type="text/javascript" src="cordova.js"></script>
                 <script src="./js/jquery-2.0.3.min.js"></script>
                 <script src="./js/speechRecognizer.js"></script>
@@ -16,7 +16,7 @@
                 <script src="./js/thumbs.0.6.0.min.js"></script>
                 
                 <script>
-                    var socket = io.connect('http://slite-prod.elasticbeanstalk.com:1337');
+                    var socket = io.connect('http://slite.elasticbeanstalk.com:1337');
                     //var socket = io.connect('http://localhost:1337');
                     </script>
                 
