Made b1 working + added video autoplay to A1

--- a/AWS_Website/www_static/b1/PPT/SliteShow_PitchDeck.pptx.html/img5.html
+++ b/AWS_Website/www_static/b1/PPT/SliteShow_PitchDeck.pptx.html/img5.html
@@ -3,102 +3,38 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Team</title>
+  <title>Slite: Pain Points</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-  <style type="text/css">
-  	img{
-  		float:left;
-  	}
-.photos ul {
-          list-style: none;
-
-        }
-
-        .photos ul li { 
-            display: inline;
-            list-style: none;
-            float: left;
-            padding: 0 10px 0 0;
-            text-align:center; 
-        }
-
-        .photos ul li span a {
-            background-color: #fff;
-        }
-
-        .photos ul li a {
-
-          display: block;
-          /*
-          margin-right: 10px;
-          margin-bottom: 7px; */
-          -webkit-transition: all 0.3s linear;
-          -moz-transition: all 0.3s linear;
-          transition: all 0.3s linear;
-        }
-        .photos ul li a:hover {
-          opacity: 1.0;
-        }
-
-        .photos ul li a img {
-          border: 6px solid #e1d9ec;
-		  width: 180px;
-		  height: 180px;
-        } color: #000;
-}
+  <style>
+	li {
+		padding-bottom: 20px;
+	}
   </style>
 </head>
 <body>
 <center>
-	<div class="title">TEAM</div>
-	<div class="slideBody" style='padding-left: 10px'>
-		<ul style='padding-left: 200px;'>
-	      <li>2 PhDs</li>
-	     <li>60+ yrs software, 30+ yrs business</li>
-		 <!--<ul>
-			<li>Microsoft, Yahoo, KPMG, Arthur Andersen</li>
-		 </ul>-->
-	     <li>Mountain View, California</li>
+	<div class="title">SOLUTION</div>
+	<div class="slideBody">
+		<img src="../img/SLITE_LOGO.gif" width=100px/>
+		<ul>
+				<!--<li>Powerpoint meets Facebook meets Skype meets Web 2.0</li>-->
+				<li>In-browser remote presentation platform</li>
+				<ul>
+					<li>Web Portal for live presentation, discussion and video communication inside presentation</li>
+				</ul>				
+				<li>Remote Control iPhone and Android app </li>
+				<li>Simple API for embedding into other products </li>
+			
+		      	<!--<ul style='font-size:30px;'>
+		      		<li>Commenting, Interactive, Sharing</li>
+		      	</ul>-->
+				<!--<ul>
+			      	<li>15% lost on setup instead of content</li>
+			      	<li><span style='font-size:30px'><b>$11 billion annually</b> in US loss ONLY on setup issues</span></li>
+			      	<li>A year of your life (avg) is wasted in unproductive meetings</li>
+			      </ul>-->
 		</ul>
-
-
-<center>
-  <div class="photos" style='font-size: 20px; width: 1300px'>
-        <ul style='padding-left: 10px; margin-left:0px;'>
-            <li><span><a href="#"><img src="../img/Team_Jim.jpg"/></a></span>
-            <div class='teamMember'>CEO: Jim</div>
-            <div class='teamMember'>10 yrs business</div>
-            <div class='teamMember'>15 yrs software</div>
-            </li>
-
-            <li><a href="#"><img src="../img/Team_Michael.jpg" /></a>
-            <div class='teamMember'>CTO: Michael</div>
-            <div class='teamMember'>PhD</div>
-            </li>
-
-            <li><span><a href="#"><img src="../img/Team_Andrew.jpg"/></a></span>
-            <div class='teamMember'>Business: Andrew</div>
-            <div class='teamMember'>PhD</div>
-            </li>
-
-            <li><span class='teamMember'><a href="#"><img src="../img/Team_Ksenia.jpg"/></a></span>
-            <div class='teamMember'>Legal: Ksenia</div>
-            <div class='teamMember'>UC Hastings</div>
-            </li>
-
-            <li><span class='teamMember'><a href="#"><img src="../img/Team_Irene.jpg"/></a></span>
-            <div class='teamMember'>Business: Irene</div>
-            <div class='teamMember'>Google, Morgan-Stanley</div>
-            </li>			
-
-            <li><a href="#"><img src="../img/Team_Lev.jpg"/></a>
-            <div class='teamMember'>Developer: Lev</div>
-            <div class='teamMember'>UC Berkeley</div>
-            </li>
-        </ul>
- </div>
-</center>
-
+	</div>
 </center>
 </body>
 </html>
