Added Google Analytics to 3 index.html pages
Added Google Analytics to main website, presentation page and remote

--- a/AWS_Website/www_static/remote/index.html
+++ b/AWS_Website/www_static/remote/index.html
@@ -21,7 +21,15 @@
 
 	</head>
 <body onload="startup()"
-    ><br
+    ><!-- Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-NRK9KQ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NRK9KQ');</script>
+<!-- End Google Tag Manager --><br
     ><div class="UI topRow midCol" id="URLBox">www.slite.us/<input type="text" id="URLSlides" value="Enter code here" style="color:grey; border:0px" onclick="clearURLSlides()"></div
     ><div class="UI topRow rightCol" id="timeDisplay">start &#8986;</div
     ><br
@@ -46,5 +54,14 @@
     ><div class="UI botRow roundButton" id="draw">DRAW</div
     ><!--<div class="UI botRow roundButton" id="speech">VOICE<br>CONTROL</div
     >--></div
-    ></body>
+    ><script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-61563357-1', 'auto');
+  ga('send', 'pageview');
+
+</script></body>
 </html>
