--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img13.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img13.html
@@ -47,7 +47,7 @@
 
       // 4. The API will call this function when the video player is ready.
       function onPlayerReady(event) {
-		setTimeout(playVideo, 6000);
+		//setTimeout(playVideo, 6000);
         //event.target.playVideo();
       }
 
