--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Slite - online presentations</title>
 	<meta name="title" content="SLITE - online presentations" />
-	<meta name="description" content="Upload or create powerpoint slides for web" />
+	<meta name="description" content="Live online powerpoint slides presentation for web" />
 	<link rel="image_src" href="img/favicon.png" />
 
 	<meta content="http://slite.us" property="og:url" />
@@ -58,6 +58,15 @@
     </body>
 </head>
 <body>
+<!-- Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-NRK9KQ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NRK9KQ');</script>
+<!-- End Google Tag Manager -->
   <div class="wrapper">
   
 
@@ -178,6 +187,15 @@
     <!--<a href="https://github.com/peachananr/onepage-scroll"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>-->
   </div>
   
- 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-61563357-1', 'auto');
+  ga('send', 'pageview');
+
+</script> 
 </body>
 </html>
