--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img12.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img12.html
@@ -5,9 +5,9 @@
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
   <title>Slite: Infinite Data</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-  <script language="JavaScript" src="../js/jquery-2.1.3.min.js"></script>
+    <script src="../../../js/jquery-2.1.3.min.js"></script>
 
-  <script language="JavaScript" src="../js/infinite-scroll.js"></script>
+    <script src="../../js/infinite-scroll.js"></script>
 <style>
 td{padding:40px;
 border: 2px;
