--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img2.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
      "http://www.w3.org/TR/html4/transitional.dtd">
 <html>
 <head>
@@ -41,7 +41,7 @@
           border: 6px solid #e1d9ec;
 		  width: 180px;
 		  height: 180px;
-        } color: #000;
+        }
 		
 }
   </style>
