Removed Open Modal

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -72,20 +72,15 @@
 
 	<div id="videochatpanel"></div>
 	<div id="videochat" style="overflow-x: hidden; overflow-y: scroll;">
-
 		<h1>Video Chat <div class="closevideo" id="closevideo"></div></h1>
-		<div id="clickallow" style='font-size:24px;padding-top:0px;'>click "Allow" above<b sty;e='font-size:38'> &#8599;</b></div>
-	
-
+		<div id="clickallow" style='font-size:24px;padding-top:0px;'>click "Allow" above<b style='font-size:38'> &#8599;</b></div>	
 		<article id="videochatMainContainer">
-
 			<!-- just copy this <section> and next script -->
 			<section class="experiment">
 				<section id="chatTop">
 					<span>
 						Private ?? <a href="/video-conferencing/" target="_blank" title="Open this link in new tab. Then your conference room will be private!"><code><strong id="unique-token">#123456789</strong></code></a>
 					</span>
-
 					<input type="text" id="conference-name">
 					<button id="setup-new-room" class="setup">Setup New Conference</button>
 				</section>
@@ -97,7 +92,6 @@
 				<div id="videos-container"></div>
 			</section>
 		</article>
-
 	</div>
 	
 	<div class="startTemporaryPopup" id="videoChatExplanator">&#8592; click grey bar to open Video Chat</div>
