Registration form fixes: 1. Added error codes 2. Visualisation in progress

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -60,6 +60,7 @@
             <div id="progressbar"></div>
         </div>
     </div>
+    <a href="#upload_presentation">Open Modal</a>
 
     <!-- Google Tag Manager -->
     <noscript>
@@ -181,7 +182,7 @@
                                 <% if (!user) { %>
                                     <a href="signin.html"><span class="glyphicon glyphicon-user"></span> Sign in</a>
                                 <% } else { %>
-                                <a href="/account"><span class="glyphicon glyphicon-user"></span> Hello, <%= user.username %>.</a>
+                                <a href="/account.html"><span class="glyphicon glyphicon-user"></span> Hello, <%= user.username %>.</a>
                                 <% } %>
                             </li>
                             <li class="link-signin">
