--- a/AWS_Website/www_static/signup.html
+++ b/AWS_Website/www_static/signup.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Slite - web presentation software</title>
+        <title><%= error %> Slite - web presentation software</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,17 +21,17 @@
         <section class="middle">
             <div class="container-fluid">
 
-                <form class="m-form-signin" role="form" action="/signup" method="post">
+                <form class="m-form-signin" role="form" action="/signup.html" method="post">
                     <h1>Sign up</h1>
                     <h2>Create your personal account </h2>
                     <div class="form-group">
                         <label for="exampleInputUsername">Username</label>
-                        <input type="text" class="form-control" placeholder="Enter Username" name="username">
+                        <input type="text" class="form-control" placeholder="Enter Username" name="username" value="<%= request.param('username') %>">
                     </div>
 
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" name="email" placeholder="Enter email">
+                        <input type="email" class="form-control" name="email" placeholder="Enter email" value="<%= request.param('email') %>">
                     </div>
 
                     <div class="form-group">
@@ -92,18 +92,18 @@
 
                         <ul class="nav navbar-nav navbar-right">
                           <li class="link-signin">
-                           <!-- <% if (!user) { %>-->
+                            <% if (!user) { %>
                               <a href="signin.html"><span class="glyphicon glyphicon-user"></span> Sign in</a>
-                           <!-- <% } else { %>
-                              <a href="/account"><span class="glyphicon glyphicon-user"></span> Hello, <%= user.username %>.</a>
-                            <% } %> -->
+                           <% } else { %>
+                              <a href="/account.html"><span class="glyphicon glyphicon-user"></span> Hello, <%= user.username %>.</a>
+                            <% } %> 
                           </li>
                           <li class="link-signin">
-                           <!-- <% if (!user) { %> -->
+                           <% if (!user) { %> 
                               <a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign up</a>
-                           <!-- <% } else { %>
+                           <% } else { %>
                               <a href="/logout"><span class="glyphicon glyphicon-user"></span> Sign out.</a>
-                            <% } %>-->
+                            <% } %>
                           </li>
                         </ul>
                       </div><!-- /.navbar-collapse -->
