--- a/AWS_Website/www_static/signin.html
+++ b/AWS_Website/www_static/signin.html
@@ -25,7 +25,7 @@
                     <h1>Sign in</h1>
                     <div class="form-group">
                         <label for="Username">Username</label>
-                        <input type="text" class="form-control" name="username" placeholder="Enter username">
+                        <input type="text" class="form-control" name="username" placeholder="Enter username" value="<%= request.param('username') %>">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label> <a href="#">(forgot password)</a>
