new fairytale presentation

--- a/AWS_Website/www_static/fairytale/index.html
+++ b/AWS_Website/www_static/fairytale/index.html
@@ -1,7 +1,7 @@
 ﻿
 <html>
 <head>
-	<title>Slite Pitch Deck</title>
+	<title>Slite: Science of Fairy Tales</title>
 
 	<!-- Video Chat files -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -1094,7 +1094,7 @@
 				  });
 				  	
 					var number_of_slides = "NUM_SLIDES_TEMPLATE";
-					if (!parseInt(number_of_slides, 10)) number_of_slides = 29;
+					if (!parseInt(number_of_slides, 10)) number_of_slides = 30;
 					for (var slide = 1; slide <= number_of_slides; ++slide) {
 						//var slide_html_path= "C:\\Users\\marov\\Documents\\GitHub\\mobremcon\\BACKEND\\TEST\\MA\\SliteShow_PitchDeck.pptx.html\\";
 						//var slide_html_path = data.filename;
