--- a/AWS_Website/www_static/fairytale/index.html
+++ b/AWS_Website/www_static/fairytale/index.html
@@ -28,7 +28,7 @@
     <link href="../css/github.css" rel="stylesheet">
     <!-- slider stylesheets -->
     <link class="rs-file" href="../css/rs-default.css" rel="stylesheet">
-    <link class="rs-file" href="css/A1.css" rel="stylesheet">
+    <link class="rs-file" href="../A1/css/A1.css" rel="stylesheet">
 </head>
 
 <body> <!--onresize="resizeCanvas()">-->
@@ -61,7 +61,7 @@
 
 	<div class='helpOverlay' id='helpOverlay'>
 		<div class="closevideo" id="closeHelpOverlay" style='margin-right:30px;'></div>
-		<iframe src="help.html" style='width:100%;height:100%'></iframe>
+		<iframe src="../A1/help.html" style='width:100%;height:100%'></iframe>
 	</div>
 
 	<div id="closedCaptioningPanel"></div>
@@ -142,10 +142,11 @@
     <script> hljs.initHighlightingOnLoad();</script>
 
     <script>
-        var number_of_slides = "NUM_SLIDES_TEMPLATE";
+        var number_of_slides = 'NUM_SLIDES_TEMPLATE';
         var slite = '/HASH_TEMPLATE/';
+        var staticSlides = 30;
     </script>
-    <script src="js/A1.js"></script>
+    <script src="../A1/js/A1.js"></script>
     <!-- end VideoChat Javascript -->
 </body>
 </html>
