Registration messages added

--- a/AWS_Website/www_static/signin.html
+++ b/AWS_Website/www_static/signin.html
@@ -23,6 +23,9 @@
 
                 <form class="m-form-signin" role="form" action="/signin.html" method="post">
                     <h1>Sign in</h1>
+		    <% if (request.param("REG_OK") == 1) { %>
+				<h4 style="color: #FF0000">Congrats! You have registered. Enter your password to log in.</h4>
+		    <% } %>
                     <div class="form-group">
                         <label for="Username">Username</label>
                         <input type="text" class="form-control" name="username" placeholder="Enter username" value="<%= request.param('username') %>">
