--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -42,7 +42,7 @@
     </div>
 
 
-    <div id="redDot"><img src="img/redDot.png" alt="Laser Pointer"></div>
+    <div id="redDot"><img src="../img/redDot.png" alt="Laser Pointer"></div>
 
   	<div id="video-gallery" class="royalSlider videoGallery rsDefault"></div>
 
