fixed fairytale presentation

--- a/AWS_Website/www_static/fairytale/index.html
+++ b/AWS_Website/www_static/fairytale/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-	<title>Slite Pitch Deck</title>
+	<title>Slite: Science of Fairytales</title>
 
 	<!-- Video Chat files -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
