--- a/AWS_Website/www_static/fairytale/PPT/SliteShow_PitchDeck.pptx.html/img12.html
+++ b/AWS_Website/www_static/fairytale/PPT/SliteShow_PitchDeck.pptx.html/img12.html
@@ -47,8 +47,10 @@
 
       // 4. The API will call this function when the video player is ready.
       function onPlayerReady(event) {
+	    player.mute();
 		player.seekTo(7, false);
 		playVideo();
+		player.setVolume(0);
 		//setTimeout(stopVideo, 174000);
         //event.target.playVideo();
       }
@@ -62,6 +64,13 @@
           //setTimeout(stopVideo, 25000);
           done = true;
         }
+		
+		if(event.data == YT.PlayerState.ENDED){
+			player.seekTo(0);
+			$('#video-front').show();
+			$('.video-container').hide();
+
+		}
       }
       function stopVideo() {
         player.stopVideo();
