--- a/AWS_Website/www_static/fairytale/PPT/SliteShow_PitchDeck.pptx.html/img22.html
+++ b/AWS_Website/www_static/fairytale/PPT/SliteShow_PitchDeck.pptx.html/img22.html
@@ -47,8 +47,10 @@
 
       // 4. The API will call this function when the video player is ready.
       function onPlayerReady(event) {
+		player.mute();
 		player.seekTo(2, false);
 		playVideo();
+		player.setVolume(0);
 		//setTimeout(stopVideo, 174000);
         //event.target.playVideo();
       }
