--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -60,7 +60,7 @@
             <div id="progressbar"></div>
         </div>
     </div>
-    <a href="#upload_presentation">Open Modal</a>
+    <a href="#upload_presentation"></a>
 
     <!-- Google Tag Manager -->
     <noscript>
