Added 'Prev' button back and removed duplicated buttons 'pointer' and 'draw'

--- a/AWS_Website/www_static/remote/index.html
+++ b/AWS_Website/www_static/remote/index.html
@@ -51,11 +51,14 @@
         <span style="font-size:2em; vertical-align:top; float:right; padding-right:30px; padding-left:10px;">&gt;</span>
         <span style="vertical-align:top; float:right">NEXT</span>
     </div>
-    <div class="UI botRow roundButton" id="laser">POINTER</div><div class="UI botRow roundButton" id="draw">DRAW</div>
+    <div class="UI botRow roundButton" id="prev" style="height:50px; line-height:50px;">
+        <span style="font-size:2em; vertical-align:top; float:left; padding-right:10px; padding-left:30px;">&lt;</span>
+        <span style="vertical-align:top;float:left;">PREV</span>
+    </div>
+    <div class="UI botRow roundButton" id="laser">POINTER</div>
+    <div class="UI botRow roundButton" id="draw">DRAW</div>
     <!--<div class="UI botRow roundButton" id="speech">VOICE<br>CONTROL</div>-->
     </div>
-	<div class="UI botRow roundButton" id="laser">POINTER</div>
-    <div class="UI botRow roundButton" id="draw">DRAW</div>
     <!--<div class="UI botRow roundButton" id="speech">VOICE<br>CONTROL</div>
     </div>-->
     <script>
