--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -159,6 +159,7 @@
         var staticSlides = 13;
     </script>
     <script src="../A1/js/A1.js"></script>
+    <script src="../A1/js/notes.js"></script>
     <!-- end VideoChat Javascript -->
 </body>
 </html>
