--- a/AWS_Website/www_static/remote/index.html
+++ b/AWS_Website/www_static/remote/index.html
@@ -46,18 +46,19 @@
     <div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)">
     <div id="overlay"></div>
     <iframe id="theIframe" class="frame" seamless></iframe>
-	</div><div class="UI midRow rightCol" id="otherSlides">
-	<div class="UI botRow roundButton" id="next" style="height:50px; line-height:50px;">
-        <span style="font-size:2em; vertical-align:top; float:right; padding-right:30px; padding-left:10px;">&gt;</span>
-        <span style="vertical-align:top; float:right">NEXT</span>
-    </div>
-    <div class="UI botRow roundButton" id="prev" style="height:50px; line-height:50px;">
-        <span style="font-size:2em; vertical-align:top; float:left; padding-right:10px; padding-left:30px;">&lt;</span>
-        <span style="vertical-align:top;float:left;">PREV</span>
-    </div>
-    <div class="UI botRow roundButton" id="laser">POINTER</div>
-    <div class="UI botRow roundButton" id="draw">DRAW</div>
-    <!--<div class="UI botRow roundButton" id="speech">VOICE<br>CONTROL</div>-->
+	</div>
+	<div class="UI midRow rightCol" id="otherSlides">
+		<div class="UI botRow button" id="next" style="height:50px; line-height:50px;">
+			<span style="font-size:2em; vertical-align:top; float:right; padding-right:30px; padding-left:10px;">&gt;</span>
+			<span style="vertical-align:top; float:right">NEXT</span>
+		</div>
+		<div class="UI botRow button" id="prev" style="height:50px; line-height:50px;">
+			<span style="font-size:2em; vertical-align:top; float:left; padding-right:10px; padding-left:30px;">&lt;</span>
+			<span style="vertical-align:top;float:left;">PREV</span>
+		</div>
+		<div class="UI botRow button" id="laser">POINTER</div>
+		<div class="UI botRow button" id="draw">DRAW</div>
+		<!--<div class="UI botRow roundButton" id="speech">VOICE<br>CONTROL</div>-->
     </div>
     <!--<div class="UI botRow roundButton" id="speech">VOICE<br>CONTROL</div>
     </div>-->
