--- a/AWS_Website/www_static/remote/index.html
+++ b/AWS_Website/www_static/remote/index.html
@@ -51,13 +51,13 @@
     <iframe id="theIframe" class="frame" seamless></iframe>
 	</div>
 	<div class="UI botRow" id="otherSlides">
-		<div class="UI button" id="prev" style="height:50px; line-height:50px;">
+		<div class="UI button button_unpressed" id="prev" style="height:50px; line-height:50px;">
 			<span style="font-size:2em; vertical-align:top; float:left; padding-right:10px; padding-left:30px;">&lt;</span>
 			<span style="vertical-align:top;float:left;">PREV</span>
 		</div>
-		<div class="UI button" id="laser">POINTER</div>
-		<div class="UI button" id="draw">DRAW</div>
-		<div class="UI button" id="next" style="height:50px; line-height:50px;">
+		<div class="UI button button_unpressed" id="laser">POINTER</div>
+		<div class="UI button button_unpressed" id="draw">DRAW</div>
+		<div class="UI button button_unpressed" id="next" style="height:50px; line-height:50px;">
 			<span style="font-size:2em; vertical-align:top; float:right; padding-right:30px; padding-left:10px;">&gt;</span>
 			<span style="vertical-align:top; float:right">NEXT</span>
 		</div>
