Fixed upload dialog css and made it resizable

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -45,7 +45,7 @@
     <div id="upload_presentation" class="uploadDialog">
         <div>
             <a href="#closeUpload" title="Close" class="closeUpload">X</a>
-            <h3 id="uploadLabel" hidden>Uploading presentation...</h3>
+            <h3 id="uploadLabel">Uploading presentation...</h3>
             <div id="progressbar"></div>
         </div>
     </div>
