Added to Menu share on FB and Twitter

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -115,8 +115,10 @@
 			<li><a href="#"></a>
 				<ul class="menuSubmenu">
 				  <li><a href="javascript:showRemote()" id="menuRemote">Become Presenter</a></li>
-				  <li><a href="javascript:showHideComments()" id="menuOpenWallChat"><span id='chatOpenCloseLabel'></span> Chat</a></li>
+				  <li><a href="javascript:shareFacebook()" id="shareFacebook">Share on Facebook</a></li>
+				  <li><a href="javascript:shareTwitter()" id="shareTwitter">Share on Twitter</a></li>
 				  <li><a href="javascript:showHidePersonalNotes()" id="menuPersonalNotes"><span id='personalNotesOpenCloseLabel'></span> Personal Notes</a></li>
+				  <li><a href="javascript:showHideComments()" id="menuOpenWallChat"><span id='chatOpenCloseLabel'></span> Chat</a></li>
 				  <li><a href="javascript:showHideVideoChat()" id="menuOpenVideoChat"><span id='videoChatOpenCloseLabel'></span> Video Chat</a></li>
 				  <!--<li><a href="javascript:showHideInsertVideoSlideOverlay()" id="menuInsertVideoSlide">Insert Video Slide</a></li> -->
 				  <li><a href="http://www.slite.us">Home</a></li>
