--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -11,13 +11,13 @@
     <meta name="author" content="SLITE inc.">
     <link rel="canonical" href="http://slite.us" />
 
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/jquery-ui.min.css">
     <!--<link rel="stylesheet" href="css/bootstrap.css">-->
     <!--<link rel="stylesheet" href="css/base.css">-->
     <!--<link rel="stylesheet" href="css/skel.css" />-->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
     <!--<link rel=" stylesheet" href="css/style-xlarge.css" />-->
-    <!--<link rel="stylesheet" href="css/jquery-ui.min.css">-->
     <!--<link rel="stylesheet" href="css/screen.css">-->
     <!--<link rel="stylesheet" href="css/mainPage.css">-->
 
