--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -56,7 +56,15 @@
 	<div id="comments">
 			<center><div class='panelTitle' style='position: absolute; left: 25%;'>Chat with others about this presentation</div><center>
 			<div class="closevideo" id="closeChat" style='margin-right: 20px;'></div>
-			<iframe src="../chat.html" style='width:100%;height:100%'></iframe>
+			<iframe id="urlChat" src="../chat.html" style='width:100%;height:100%'></iframe>
+			<script>
+			    var pathName = document.location.pathname;
+			    if (pathName) {
+			        pathName = pathName.replace('/', '');
+			    }
+			    pathName = pathName.toUpperCase();
+			    document.getElementById('urlChat').src = "../chat.html?presentation=" + pathName;
+    		</script>
 	</div>
 
 	<div class='helpOverlay' id='helpOverlay'>
